--- a/data/vecerek.html
+++ b/data/vecerek.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs" xmlns="http://www.w3.org/1999/html">
+<html lang="cs" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,13 +37,16 @@
 </section>
 <section id="page-4" class="page page-suda">
     <h1>Postup práce</h1>
-    <p><i class="fa-regular fa-circle-dot"></i> Původně jsme plánovali zpracovat jiné dílo, ale shodli jsme se, že věsit lopatu ze stropu nemusí být zrovna
+    <p><i class="fa-regular fa-circle-dot"></i> Původně jsme plánovali zpracovat jiné dílo, ale shodli jsme se, že věsit
+        lopatu ze stropu nemusí být zrovna
         jednoduché, tak jsme si vybrali něco, na co máme prostředky.
     </p> <br>
-    <p><i class="fa-regular fa-circle-dot"></i> David chtěl prso vytisknout 3D tiskem a poté ho namalovat, ale to se nám nechtělo, tak jsme použili palačinku,
+    <p><i class="fa-regular fa-circle-dot"></i> David chtěl prso vytisknout 3D tiskem a poté ho namalovat, ale to se nám
+        nechtělo, tak jsme použili palačinku,
         protože vypadá texturou podobně jako prso, které chceme imitovat.
     </p><br>
-    <p><i class="fa-regular fa-circle-dot"></i> David přinesl krabici, Šimon látku a Erik udělal palačinku a přinesl marmeládu (za 40 Kč).
+    <p><i class="fa-regular fa-circle-dot"></i> David přinesl krabici, Šimon látku a Erik udělal palačinku a přinesl
+        marmeládu (za 40 Kč).
     </p><br>
     <p><i class="fa-regular fa-circle-dot"></i> David s Erikem vypracovali veledílo a Šimon udělal prezentaci.
     </p>
@@ -51,7 +54,6 @@
         <a href="#page-3" class="btn">Předchozí <i class="fas fa-arrow-circle-up"></i></a>
         <a href="#page-5" class="btn">Další <i class="fas fa-arrow-circle-down"></i></a>
     </div>
-</section>
 </section>
 <section id="page-5" class="page page-licha">
     <h1>KONEC</h1>
@@ -64,8 +66,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js">
     crossorigin = "anonymous"
-    referrerpolicy = "no-referrer"
-</script>
+    referrerpolicy = "no-referrer"</script>
 
 <script>
     $(".btn").on("click", function (event) {
